slug optional, nanoid generator when slug empty

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -33,7 +33,7 @@
                     v-model="url"
                     :rules="urlRules"
                     name="url"
-                    label="Url"
+                    label="Url *"
                     placeholder="www.youtube.com"
                     required
                     outlined
@@ -43,7 +43,7 @@
                     v-model="slug"
                     :rules="slugRules"
                     name="slug"
-                    label="Slug"
+                    label="Slug (Optional)"
                     placeholder="xT3vv1"
                     outlined
                     clearable
