--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,7 +28,7 @@
         </v-app-bar>  
       <v-main>
         <template>
-            <v-form ref="form" lazy-validation class="url-form">
+            <v-form ref="form" lazy-validation v-model="valid" class="url-form">
                 <v-text-field
                     v-model="url"
                     :rules="urlRules"
@@ -57,6 +57,22 @@
             </v-form>
         </template>
       </v-main>
+
+      <v-snackbar
+        v-model="snackbar"
+        :timeout="timeout"
+        > {{ text }}
+        <template v-slot:action="{ attrs }">
+          <v-btn
+            color="blue"
+            text
+            v-bind="attrs"
+            @click="snackbar = false"
+          >
+            Close
+          </v-btn>
+        </template>
+      </v-snackbar>
     </v-app>
   </div>
 
